--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>GeoWild</title>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="style.css" rel="stylesheet" />
-
-        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
-
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=default"></script>
+        <link href="./style.css" rel="stylesheet" />
         <script type="module" src="./index.ts"></script>
-
     </head>
     <body>
         <div class="d-flex" id="wrapper">
@@ -55,14 +49,7 @@
                 <div class="container-fluid">
 
                   <div id="map"></div>
-
-                </div>
-            </div>
-        </div>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
-
-            <!-- 
+                              <!-- 
      The `defer` attribute causes the callback to execute after the full HTML
      document has been parsed. For non-blocking uses, avoiding race conditions,
      and consistent behavior across browsers, consider loading using Promises
@@ -72,6 +59,14 @@
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDO2cBllz6ypiLHCaORitLVhpaTfNtdZgk&callback=initMap&v=weekly"
     defer
   ></script>
+
+                </div>
+            </div>
+        </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+        <script src="./script.js"></script>
+
 
     </body>
 </html>
